# Crowpanel_weatherstation

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  README.md  idf_component.yml  lv_conf.h  main.c  sdkconfig.defaults  weather.c  weather.h
peripheral/bsp_display/: CMakeLists.txt  bsp_display.c
peripheral/bsp_display/include/: bsp_display.h
peripheral/bsp_i2c/: CMakeLists.txt  bsp_i2c.c
peripheral/bsp_i2c/include/: bsp_i2c.h
peripheral/bsp_illuminate/: CMakeLists.txt  bsp_illuminate.c
peripheral/bsp_illuminate/include/: bsp_illuminate.h
